updated hidden folder to keep compatibility with user base

--- a/installations/devportal/install.yml
+++ b/installations/devportal/install.yml
@@ -4,7 +4,7 @@
   gather_facts: no
   vars:
     ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
+    apigee_workspace: "~/.apigee-workspace"
     property_folders:
     - "~/.apigee-secure"
     - "~/.apigee"
@@ -27,7 +27,7 @@
   tags: ['pdb']
   vars:
     ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
+    apigee_workspace: "~/.apigee-workspace"
     apigee_secure_folder: "~/.apigee-secure"
     apigee_custom_properties_folder: "~/.apigee"
   roles:
@@ -43,7 +43,7 @@
   tags: ['dp']
   vars:
     ansible_workspace: "~/.ansible"
-    apigee_workspace: "~/apigee-workspace"
+    apigee_workspace: "~/.apigee-workspace"
     apigee_secure_folder: "~/.apigee-secure"
     apigee_custom_properties_folder: "~/.apigee"
   roles:
