--- a/setup/archive/repository-custom-properties.yml
+++ b/setup/archive/repository-custom-properties.yml
@@ -1,8 +1,8 @@
 ---
 ansible_config: "~/.ansible"
-apigee_config: "~/apigee"
+apigee_config: "~/.apigee"
 apigee_security: "~/.apigee-secure"
-apigee_workspace: "~/apigee-workspace"
+apigee_workspace: "~/.apigee-workspace"
 
 playbook_workspace: "{{ apigee_workspace }}/playbooks"
 role_workspace: "{{ apigee_workspace }}/apigee-opdk-role-workspace"
