--- a/setup/setup.yml
+++ b/setup/setup.yml
@@ -7,10 +7,10 @@
      ansible_workspace: "~/ansible"
 
 #     This is the location where credentials, license material, GCP service account files, AWS key and secret, etc are stored"
-     apigee_secure_folder: "~/apigee-secure"
+     apigee_secure_folder: "~/.apigee-secure"
 
 #     This is the location of custom property files.
-     apigee_custom_properties_folder: "~/apigee"
+     apigee_custom_properties_folder: "~/.apigee"
 
   roles:
   - { role: apigee-opdk-setup-ansible-controller }
