--- a/post-installation/remove/remove-components/remove-cassandra.yml
+++ b/post-installation/remove/remove-components/remove-cassandra.yml
@@ -23,16 +23,16 @@
       - nodetool is defined and nodetool | trim | length > 0
       msg: "Please provide the missing attribute"
 
-  - name: Decommission cassandra node
-    command: "{{ apigee_service }} apigee-cassandra decommission"
-
   - name: Obtain Nodetool status
     command: "{{ nodetool }} status | grep {{ private_address }}"
     register: nodetool_status
 
-  - name: Obtain node UUID
-    set_fact:
-      uuid: "{{ register.stdout.split()[-1] }}"
+#  - name: Obtain node UUID
+#    set_fact:
+#      uuid: "{{ register.stdout.split()[-1] }}"
+
+  - name: Decommission cassandra node
+    command: "{{ apigee_service }} apigee-cassandra decommission"
 
   - name: Remove node that is not a part of the ring
     command: "{{ nodetool }} removenode {{ uuid }}"
