--- a/infrastructure/port-requirements/port-checks.yml
+++ b/infrastructure/port-requirements/port-checks.yml
@@ -7,7 +7,7 @@
   -  port-list.yml
   tasks:
   - name: Setup listener
-    shell: "nc -l -p {{ test_port }} &"
+    shell: "nc -l -p {{ test_port }}"
     register: listener_ps
 
   - block:
