added port check

--- a/infrastructure/port-requirements/port-checks.yml
+++ b/infrastructure/port-requirements/port-checks.yml
@@ -9,6 +9,8 @@
   - name: Setup listener
     shell: "nc -l -p {{ test_port }}"
     register: listener_ps
+    async: 4
+    poll: 0
 
   - name: Validate port
     wait_for:
