added port check

--- a/infrastructure/port-requirements/listener_client.yml
+++ b/infrastructure/port-requirements/listener_client.yml
@@ -11,6 +11,6 @@
     port: "{{ port }}"
     timeout: 2
     host: "{{ private_address }}"
-  delegate_to: "{{ item }}"
+  delegate_to: "{{ hostvars[item]['private_address'] }}"
   with_items: "{{ groups['ds'] }}"
 
