added port check

--- a/infrastructure/port-requirements/listener_client.yml
+++ b/infrastructure/port-requirements/listener_client.yml
@@ -1,10 +1,7 @@
 ---
 
 - name: Setup listener
-  shell: "nc -l -p {{ port }}"
-  register: listener_ps
-  async: 4
-  poll: 0
+  shell: "nc -l -p {{ port }} &"
 
 - name: Validate port
   wait_for:
