added port check

--- a/infrastructure/port-requirements/listener_client.yml
+++ b/infrastructure/port-requirements/listener_client.yml
@@ -1,13 +1,13 @@
 ---
-
 - name: Setup listener
-  shell: "nc -l -p {{ port }} &"
+  shell: "nc -l -p {{ item }} &"
+  with_items: "{{ ms_ports }}"
 
 - name: Validate port
   wait_for:
-    port: "{{ port }}"
+    port: "{{ item }}"
     timeout: 2
     host: "{{ private_address }}"
-  delegate_to: "{{ hostvars[item]['private_address'] }}"
-  with_items: "{{ groups['ds'] }}"
+  delegate_to: "{{ hostvars[host]['private_address'] }}"
+  with_items: "{{ ms_port }}"
 
