--- a/infrastructure/port-requirements/port-checks.yml
+++ b/infrastructure/port-requirements/port-checks.yml
@@ -3,25 +3,16 @@
   hosts: ms
   vars:
     test_port: 1234
+    ports: "{{ ms_ports }}"
   vars_files:
   -  port-list.yml
+
 #  roles:
 #    - { role: apigee-opdk-module }
+
   tasks:
-
-
-#  - name: Validate port
-#    wait_for:
-#      port: "{{ item.1 }}"
-#      timeout: 2
-#      host: "{{ private_address }}"
-#    delegate_to: "{{ hostvars[item.0]['private_address'] }}"
-#    with_cartesian:
-#    - "{{ groups['ds'] }}"
-#    - "{{ ms_ports }}"
-
   - name: Loop through ports
     include_tasks: listener_client.yml
-    with_items: "{{ groups['ds'] }}"
+    with_items: groups['ds']
     loop_control:
       loop_var: host
