added port check

--- a/infrastructure/port-requirements/port-checks.yml
+++ b/infrastructure/port-requirements/port-checks.yml
@@ -13,6 +13,6 @@
   tasks:
   - name: Loop through ports
     include_tasks: listener_client.yml
-    with_items: groups['ds']
+    with_items: "{{ groups['ds'] }}"
     loop_control:
       loop_var: host
